create item filename, list with revalidation

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@raycast/api": "^1.69.0",
     "@raycast/utils": "^1.14.0",
+    "@sindresorhus/slugify": "^2.2.1",
     "gpg": "^0.6.0",
     "openpgp": "^5.11.1"
   },
